@@ -7,7 +7,7 @@ AM_CPPFLAGS += -I$(top_srcdir)/include -I$(prefix)/include $(BOOST_CPPFLAGS)
 AM_LDFLAGS += -L$(top_builddir)/src -L$(prefix)/lib -avoid-version
 
 libLHAPDF_la_SOURCES = \
-  PDF.cc GridPDF.cc PDFInfo.cc \
+  PDF.cc PDFSet.cc GridPDF.cc PDFInfo.cc \
   Interpolator.cc BilinearInterpolator.cc BicubicInterpolator.cc \
   LogBilinearInterpolator.cc LogBicubicInterpolator.cc \
   ErrExtrapolator.cc NearestPointExtrapolator.cc \
